2001-06-25  John Levon  <moz@compsoc.man.ac.uk>

	* op_events.c:
	* pp/oprof_convert.c: add missing headers, remove CVS blip
 
	* dae/opd_util.h: specify malloc attribute. gives warnings on
	  older compilers, who cares. I doubt this will help but it can't
	  harm
 
2001-06-25  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprof_convert.c: continue if an error with one file occurs
 
	* dae/op_stop: remove rmmod again - it is user's choice on when/whether
	  to unload
 
2001-06-23  Philippe Elie  <ph_e@club-internet.fr>

	* pp/op_start: add missing support for specifying the log filename.
	  Get correct cpu speed information for smp as suggested by John.

	* dae/oprofiled.c: Correct a warning with some older version of the
	  popt library.
	* pp/oprofpp: as above.

	* gui/oprofile: advanced setup form added.

	* pp/oprof_convert.c: version and help option support.

2001-06-23  John Levon  <moz@compsoc.man.ac.uk>

	* pp/.cvsignore: add oprof_convert
 
2001-06-23  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprof_convert.c: new utility to convert samples files when the opd_footer
	  struct is changed.
	* pp/Makefile.in: reflect the above change. Tidy some unnecessary blank.
	* Makefile.in: Tidy some unnecessary blank/tabulation.

2001-06-23  John Levon  <moz@compsoc.man.ac.uk>

	* README: update
 
2001-06-22  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: always have smp_apic_restore()
 
2001-06-22  John Levon  <moz@compsoc.man.ac.uk>

	* various: made spacing more consistent in C source,
	  removed unused utility functions.
 
2001-06-22  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: actually call smp_apic_restore() on UP

	* dae/op_start: don't remove the module immediately after
	  inserting it !
 
2001-06-22  Philippe Elie  <ph_e@club-internet.fr>

	* dae/oprofiled.h, pp/oprofpp.h: change the opd_footer struct.
	  Bump OPD_VERSION to reflect the file format change.
	* pp/oprofpp.c: reflect the above change